--- a/index.html
+++ b/index.html
@@ -7,19 +7,26 @@
 </head>
 
 <body>
-<div id='wrapper'> 
-    <button id='reset'>Reset</button>
-    <button id='rainbow'>Rainbow</button>
-    <button id='black'>Black</button>
+    <div class='wrapper'> 
+        <div class="buttons-container">
+            <button id='reset' class='option-btn'>Reset</button>
+            <button id='rainbow' class='option-btn'>Rainbow</button>
+            <button id='black' class='option-btn'>Black</button>
 
-    <div class="slidecontainer">
-      <input type="range" min="1" max="100" value = "8" class="slider" id="myRange">
-        <p>Current grid size: <span id="demo"></span></p>
+            <input type="range" min="1" max="100" value = "8" class="slider" id="myRange">
+            <p>Current grid size: <span id="demo"></span></p>
+        </div>
+
+        <div id="container"></div>
     </div>
-    <div id="container"></div>
-</div>
+
+    <footer>
+        <p>© Jonthejon10, 2021</p>
+        <button class='github-button' id='git_btn'></button>
+    </footer>
 
 <script src="script.js"></script>
 
 </body>
+
 </html>
